# compiler

./: README.md  main.tex  syntax_guide.json
Atividade 2/: atividade_2.py
Atividades/: extract.py  utfpr-cm.html
Atividades/Atividade 1/: atividade_1.tpp
Atividades/Atividade 2/: atividade_2.py  emails.txt  new_list.txt
Atividades/Atividade 3/: README.md  extract.py
analise-lexica-caiotheodoro/: README.md  a.md  lextab.py  out.txt  teste.ebnf
analise-lexica-caiotheodoro/tests/: Busca_Linear_1061992.tpp.out  bubble_sort-2020-2.tpp  bubble_sort-2020-2.tpp.out  bubble_sort.tpp  bubble_sort.tpp.out  bubble_sort_2.tpp  bubble_sort_2.tpp.out  buscaLinear-2020-2.tpp  buscaLinear-2020-2.tpp.out  comp.tpp  comp.tpp.out  fat.tpp  fat.tpp.out  fatorial-2020-2.tpp  fatorial-2020-2.tpp.out  (+15 more)
analise-semantica-caiotheodoro/: ErrorMessages.properties  README.md  clean.py  myerror.py  mytree.py  run.py  sema-002.tpp.csv  semantic_aux.py  tpplex.py  tpplex_test.py  tppparser.py  tppsema.py  tppsema_test.py  utils.py
geracao-de-codigo-caiotheodoro-main/: CMakeCache.txt  CMakeLists.txt  ErrorMessages.properties  Makefile  README.md  bacvkup.py  cmake_install.cmake  lextab.py  main.ll  modified_main.ll  modulo_geracao_cod.ll  myerror.py  mytree.py  tppgencode.py  tppgencode_test.py  tpplex.py  tpplex_test.py  tppparser.py  tppsema.py  tppsema_test.py  utils.py
geracao-de-codigo-caiotheodoro-main/tests/: gencode-001.tpp  gencode-001.tpp.csv  gencode-003.tpp  gencode-004.tpp  gencode-008.tpp  gencode-009.tpp  gencode-012.tpp  gencode-013.tpp  gencode-014.tpp  gencode-015.tpp
(+56 files in other folders)
